tests/snapshots/run_wpt_conformance__coreml_sign_int8_4D_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
sign.https.any.js sign int8 4D tensor, coreml
 Failed to build graph: coreml runtime failed: MLModel compile failed: Failed to parse the model specification. Error: Unable to parse ML Program: in operation of type sign: Param 'x' has incorrect type for operator 'ios17.sign'. Expected { [...]>, [...]>, [...]>, tensor<fp16, tensor<fp32, tensor<int32 }; got tensor<int8, [1, 2, 2, 2]>.

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    signInput: i8[1, 2, 2, 2];
  }

  nodes {
    [signOutput] = sign(signInput, label="");
  }

  outputs { signOutput; }
}
