tests/snapshots/run_wpt_conformance__coreml_sin_float16_1D_constant_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
sin.https.any.js sin float16 1D constant tensor, coreml
 Failed to build graph: coreml runtime failed: MLModel load failed: Failed to build the model execution plan using a model architecture file '<coreml-temp-model>' with error code: -14.

--- built graph ---
webnn_graph "graph" v2 {
  consts {
    operand_0: f16[24] @bytes([186, 191, 50, 190, 212, 193, 49, 179, 71, 180, 194, 191, 204, 64, 184, 65, 163, 64, 2, 189, 26, 66, 14, 194, 65, 176, 234, 191, 236, 184, 228, 58, 215, 193, 78, 189, 104, 182, 5, 185, 195, 193, 228, 58, 208, 176, 120, 64]);
  }

  nodes {
    [sinOutput] = sin(operand_0, label="");
  }

  outputs { sinOutput; }
}
