tests/snapshots/run_wpt_conformance__coreml_sin_float32_0D_scalar.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "sin.https.any.js",
    "sin float32 0D scalar",
    "coreml",
    "PASS",
)
